# NeneBot

./: .gitignore  Makefile  README.md  README_ch.md  app.py  pyproject.toml  requirements.txt  start_windows.bat
configs/: dataset_info.json
data/processed/: nene_finetune.jsonl
data/raw/: common_translated.txt  nene_translated.txt
deploy/: Dockerfile
frontend/src/: App.vue  style.css
scripts/: build_docker.sh  init_vector_db.py  preprocess.py  run.sh  run_linter.sh  setup.sh
src/: main.py
src/api/: routers.py  schemas.py
src/core/: config.py  exceptions.py  logger.py
src/infrastructure/: llm_client.py
src/services/: embedding_svc.py  rag_pipeline.py
